--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=pcpBackEnd
-spring.datasource.url=jdbc:postgresql://localhost:5432/bdpcp
+spring.datasource.url=jdbc:postgresql://localhost:5432/bdrubimpcp
 spring.datasource.username=postgres
 spring.datasource.password=senha123
 spring.datasource.driver-class-name=org.postgresql.Driver
