Aplicação ParserDescricao e WebConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pcpBackEnd
 spring.datasource.url=jdbc:postgresql://localhost:5432/bdrubimpcp
 spring.datasource.username=postgres
-spring.datasource.password=senha123
+spring.datasource.password=123456789
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
