CORS, Security and DTO improve

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pcpBackEnd
 spring.datasource.url=jdbc:postgresql://localhost:5432/bdrubimpcp
 spring.datasource.username=postgres
-spring.datasource.password=123456789
+spring.datasource.password=senha123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.security.user.name=admin
-spring.security.user.password=senha123
+spring.security.user.password={noop}senha123
 
 # Bling API configuration
 bling.client-id=e9b5785150d15f0c3fb92048b24c853440c23b37
