Estoque Movimentacao e Sinc Bling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=pcpBackEnd
-spring.datasource.url=jdbc:postgresql://localhost:5432/bdrubimpcp
+spring.datasource.url=jdbc:postgresql://localhost:5432/testerubim01
 spring.datasource.username=postgres
-spring.datasource.password=senha123
+spring.datasource.password=123456789
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
