--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # =========================================
-# 🔧 SERVER CONFIG
+# SERVER CONFIG
 # =========================================
 # Railway define automaticamente a porta via variável PORT
 server.port=${PORT:8080}
 spring.application.name=pcpBackEnd
 
 # =========================================
-# 🗄️ DATABASE (PostgreSQL - Railway)
+#  DATABASE (PostgreSQL - Railway)
 # =========================================
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # (já está incluso na URL)
 
 # =========================================
-# ⚙️ JPA / HIBERNATE
+#  JPA / HIBERNATE
 # =========================================
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
@@ -25,13 +25,13 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # =========================================
-# 🔒 SPRING SECURITY (usuário padrão)
+#  SPRING SECURITY (usuário padrão)
 # =========================================
 spring.security.user.name=${SPRING_SECURITY_USER}
 spring.security.user.password=${SPRING_SECURITY_PASS}
 
 # =========================================
-# 🔗 BLING API CONFIGURATION
+# BLING API CONFIGURATION
 # =========================================
 bling.client-id=${BLING_CLIENT_ID}
 bling.client-secret=${BLING_CLIENT_SECRET}
@@ -41,6 +41,6 @@ bling.token-url=https://www.bling.com.br/Api/v3/oauth/token
 bling.api-url=https://www.bling.com.br/Api/v3
 
 # =========================================
-# 🌎 PERFIL ATIVO (dev / prod)
+#  PERFIL ATIVO (dev / prod)
 # =========================================
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
