--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,18 @@
 server.port=${PORT:8080}
 spring.application.name=pcpBackEnd
 
+# Hikari (gerenciador de conexões, padrão no Spring Boot)
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-timeout=10000
+
+# Tomcat (configuração para desempenho)
+server.tomcat.max-threads=50
+server.tomcat.accept-count=50
+server.tomcat.max-connections=200
+
 # =========================================
 #  DATABASE (PostgreSQL - Railway)
 # =========================================
