--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.connection-timeout=10000
 
+server.forward-headers-strategy=framework
+server.tomcat.use-relative-redirects=true
+
 # Tomcat (configuração para desempenho)
 server.tomcat.max-threads=50
 server.tomcat.accept-count=50
