--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,20 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Env ###
+.env.local
+.env
+### Maven ###
+log/
+dependency-reduced-pom.xml
+release.properties
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+buildNumber.properties
+.mvn/timing.properties
+
 ### STS ###
 .apt_generated
 .classpath
