--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,9 @@ bling.api-url=https://www.bling.com.br/Api/v3
 #  PERFIL ATIVO (dev / prod)
 # =========================================
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
+
+# =========================================
+# JWT CONFIGURATION
+# =========================================
+jwt.secret=${JWT_SECRET:mysecretkey}
+jwt.expiration=${JWT_EXPIRATION:3600000}
